force-app/main/default/objects/Alumni_Care_Services__c/Alumni_Care_Services__c.object-meta.xml
<CustomObject>
    <label>Alumni Care Services</label>
    <nameField>
        <displayFormat>Alumni Care Service-{0000}</displayFormat>
        <label>Alumni Care Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Care Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>