force-app/main/default/objects/Alumni_Care_Services__c/fields/Additional_Notes_Psyc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Psyc__c</fullName>
    <label>Additional Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>