force-app/main/default/objects/Alumni_Care_Services__c/fields/Continuing_Care_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Care_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuing Care Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alumni_Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>