force-app/main/default/objects/Alumni_Care_Services__c/fields/Continuing_Care_Notes__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Care_Notes__c</fullName>
    <label>Continuing Care Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>