force-app/main/default/objects/Alumni_Care_Services__c/fields/Continuing_Care_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Care_Recommendation__c</fullName>
    <label>Continuing Care Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>