force-app/main/default/objects/Alumni_Care_Services__c/fields/Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date__c</fullName>
    <label>Discharge Date</label>
    <type>Date</type>
</CustomField>