force-app/main/default/objects/Alumni_Care_Services__c/fields/Individual_Therapist_Address__c.field-meta.xml
<CustomField>
    <fullName>Individual_Therapist_Address__c</fullName>
    <label>Individual Therapist Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>