force-app/main/default/objects/Alumni_Care_Services__c/fields/Individual_Therapist_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Individual_Therapist_Appt_Date__c</fullName>
    <label>Individual Therapist Appt Date</label>
    <type>Date</type>
</CustomField>