force-app/main/default/objects/Alumni_Care_Services__c/fields/Individual_Therapist_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Individual_Therapist_Phone_Number__c</fullName>
    <label>Individual Therapist Phone Number</label>
    <type>Phone</type>
</CustomField>