force-app/main/default/objects/Alumni_Care_Services__c/fields/Individual_Therapist_Referral__c.field-meta.xml
<CustomField>
    <fullName>Individual_Therapist_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Therapist Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumni Care Services (Individual Therapist Referral)</relationshipLabel>
    <relationshipName>Alumni_Care_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>