force-app/main/default/objects/Alumni_Care_Services__c/fields/Individual_Therapy_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Therapy_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Therapy Recommendation</label>
    <type>Checkbox</type>
</CustomField>