force-app/main/default/objects/Alumni_Care_Services__c/fields/Initial_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Appt_Date__c</fullName>
    <label>Initial Appt Date</label>
    <type>Date</type>
</CustomField>