force-app/main/default/objects/Alumni_Care_Services__c/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <formula>if( Flow_date_time__c &gt; now() - 0.00005787037 , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Automation Bypassed?</label>
    <type>Checkbox</type>
</CustomField>