force-app/main/default/objects/Alumni_Care_Services__c/fields/Level_of_Care_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Care_Recommendations__c</fullName>
    <label>Level of Care Recommendations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>