force-app/main/default/objects/Alumni_Care_Services__c/fields/Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alumni Care Services</relationshipLabel>
    <relationshipName>Alumni_Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>