force-app/main/default/objects/Alumni_Care_Services__c/fields/Patient_Involved_in_Aftercare_Planning__c.field-meta.xml
<CustomField>
    <fullName>Patient_Involved_in_Aftercare_Planning__c</fullName>
    <label>Patient Involved in Aftercare Planning?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>