force-app/main/default/objects/Alumni_Care_Services__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Alumni Care Services</relationshipLabel>
    <relationshipName>Alumni_Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>