force-app/main/default/objects/Alumni_Care_Services__c/fields/Patient_Reason_for_Refusal__c.field-meta.xml
<CustomField>
    <fullName>Patient_Reason_for_Refusal__c</fullName>
    <label>Patient Reason for Refusal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>