force-app/main/default/objects/Alumni_Care_Services__c/fields/Patient_Refuses_This_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Patient_Refuses_This_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Refuses This Recommendation</label>
    <type>Checkbox</type>
</CustomField>