force-app/main/default/objects/Alumni_Care_Services__c/fields/Program_Address_Substance_use__c.field-meta.xml
<CustomField>
    <fullName>Program_Address_Substance_use__c</fullName>
    <label>Program Address</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>