force-app/main/default/objects/Alumni_Care_Services__c/fields/Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumni Care Services (Program Contact)</relationshipLabel>
    <relationshipName>Alumni_Care_Services3</relationshipName>
    <type>Lookup</type>
</CustomField>