force-app/main/default/objects/Alumni_Care_Services__c/fields/Program_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Phone_Number__c</fullName>
    <label>Program Phone Number</label>
    <type>Phone</type>
</CustomField>