force-app/main/default/objects/Alumni_Care_Services__c/fields/Psychiatrist_Address__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist_Address__c</fullName>
    <label>Psychiatrist Address</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>