force-app/main/default/objects/Alumni_Care_Services__c/fields/Psychiatrist_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist_Appt_Date__c</fullName>
    <label>Psychiatrist Appt Date</label>
    <type>Date</type>
</CustomField>