force-app/main/default/objects/Alumni_Care_Services__c/fields/Psychiatrist_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist_Phone_Number__c</fullName>
    <label>Psychiatrist Phone Number</label>
    <type>Phone</type>
</CustomField>