force-app/main/default/objects/Alumni_Care_Services__c/fields/Psychiatrist_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Psychiatrist Recommendation</label>
    <type>Checkbox</type>
</CustomField>