force-app/main/default/objects/Alumni_Care_Services__c/fields/Psychiatrist_Referral__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Psychiatrist Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumni Care Services (Psychiatrist Referral)</relationshipLabel>
    <relationshipName>Alumni_Care_Services2</relationshipName>
    <type>Lookup</type>
</CustomField>