force-app/main/default/objects/Alumni_Care_Services__c/fields/Recommendations_Refused__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Refused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendations Refused</label>
    <type>Checkbox</type>
</CustomField>