force-app/main/default/objects/Alumni_Care_Services__c/fields/Release_signed_for_referral__c.field-meta.xml
<CustomField>
    <fullName>Release_signed_for_referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release signed for referral?</label>
    <type>Checkbox</type>
</CustomField>