force-app/main/default/objects/Alumni_Care_Services__c/fields/Sober_Living_Address__c.field-meta.xml
<CustomField>
    <fullName>Sober_Living_Address__c</fullName>
    <label>Sober Living Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>