force-app/main/default/objects/Alumni_Care_Services__c/fields/Sober_Living_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sober_Living_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sober Living Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumni Care Services</relationshipLabel>
    <relationshipName>Alumni_Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>