force-app/main/default/objects/Alumni_Care_Services__c/fields/Sober_Living_Facility__c.field-meta.xml
<CustomField>
    <fullName>Sober_Living_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sober Living Facility</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Elixir_Account_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Business_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alumni Care Services (Sober Living Facility)</relationshipLabel>
    <relationshipName>Alumni_Care_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>