force-app/main/default/objects/Alumni_Care_Services__c/fields/Sober_Living_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Sober_Living_Phone_Number__c</fullName>
    <label>Sober Living Phone Number</label>
    <type>Phone</type>
</CustomField>