force-app/main/default/objects/Alumni_Care_Services__c/fields/Sober_Living_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Sober_Living_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sober Living Recommendation?</label>
    <type>Checkbox</type>
</CustomField>