force-app/main/default/objects/Alumni_Care_Services__c/fields/Substance_Use_Treatment_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Substance_Use_Treatment_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substance Use Treatment Recommended?</label>
    <type>Checkbox</type>
</CustomField>