force-app/main/default/objects/Alumni_Care_Services__c/validationRules/Do_not_Contact_is_non_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_Contact_is_non_editable</fullName>
    <active>true</active>
    <description>The Do Not Contact checkbox should be editable only on account</description>
    <errorConditionFormula>ISCHANGED( Do_Not_Contact__c ) &amp;&amp; Is_Automation_Bypassed__c = false</errorConditionFormula>
    <errorDisplayField>Do_Not_Contact__c</errorDisplayField>
    <errorMessage>You can only edit the Do Not Contact at the Account</errorMessage>
</ValidationRule>